2007-08-01  Sven Schuetz <sven@de.ibm.com>

        * cimXmlGen.c, objectImpl.c:
        Fixed 1763178: GetClass operation failure

2007-08-01  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1754811: sfcb misses refences/referenceNames call in certain
	upcalls

2007-07-10  Sven Schuetz <sven@de.ibm.com>

	* cimXmlParser.c:
	Fixed 1752715: sfcb does not unescape incoming blanks

2007-07-24  Adrian Schuur

	* internalProvider.c:
	Fixed 1759208: internalProvider segfaults when object not found

2007-07-10  Sven Schuetz <sven@de.ibm.com>

	* objectpath.c:
	Fixed 1751084 sfcb does not support a hostname in an objectpath

2007-07-09  Sven Schuetz <sven@de.ibm.com>

	* default.reg, providerMgc.c:
	Fixed 1748392: associations in interop namespace might not work

2007-07-07  Tyrel Datwyler <tyreld@us.ibm.com>

   * classProvider.c, classProviderGz.c:
   Fixed 1746771: Memory leak in classProviderGz.c - in gatherNameSpaces()

2007-07-07  Tyrel Datwyler <tyreld@us.ibm.com>

   * httpAdapter.c:
   Fixed 1725493: 401 send twice

2007-07-03  Adrian Schuur

	* objectPath.c:
	Fixed 1745103: bad key property when addKey done with type CMPI_chars

2007-06-29  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c, providerMgr.h, cimXmlRequest.c:
	Fixed 1743692 sfcb does not return OBJECTPATHEs for associatorNames

2007-06-27  Tyreld Datwyler <tyreld@us.ibm.com>

	* classProviderMem.c:
	Fixed 1744540: createClass segfault in classProviderMem

2007-06-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* objectImplSwapI32toP32.c: 
	Fixed 1741435: cross-built repository corruption.	

	* Makefile.am: 
	Fixed 1715519: missing SLP headers

	* brokerUpc.c: 
	Fixed 1698462: upcall with empty parameter list crash.

2007-06-22  Tyrel Datwyler <tyreld@us.ibm.com>

	* fileRepository.c, objectImpl.c, providerMgr.c, queryLexer.l,
	queryStatement.c, support.c:
	Fixed 1741211 cleanup compiler warnings

2007-06-21  Sven Schuetz <sven@de.ibm.com>
